@@ -138,7 +138,7 @@ if (__i == ((fd_set *)(set))->fd_count) {\
 #ifndef _TIMEVAL_DEFINED /* also in sys/time.h */
 #define _TIMEVAL_DEFINED
 struct timeval {
-	long    tv_sec;
+	time_t  tv_sec;
 	long    tv_usec;
 };
 #define timerisset(tvp)	 ((tvp)->tv_sec || (tvp)->tv_usec)
